--- a/index.html
+++ b/index.html
@@ -144,4 +144,32 @@
         <p>Le groupe de musique qui vous emmène au cœur du son</p>
     </header>
 
-    
+    <div class="intro">
+        <h2>Bienvenue sur notre site officiel!</h2>
+        <p>Nous sommes AELAD, un groupe passionné par la musique et l'innovation. Nous mélangeons différents genres musicaux pour créer une expérience unique. Notre musique est un voyage sonore, entre rythmes endiablés et mélodies captivantes.</p>
+    </div>
+
+    <div class="gallery">
+        <img src="https://via.placeholder.com/300x200/333333/ffffff?text=Photo+1" alt="Photo 1 du groupe">
+        <img src="https://via.placeholder.com/300x200/333333/ffffff?text=Photo+2" alt="Photo 2 du groupe">
+        <img src="https://via.placeholder.com/300x200/333333/ffffff?text=Photo+3" alt="Photo 3 du groupe">
+    </div>
+
+    <div class="concerts">
+        <h2>Prochains Concerts</h2>
+        <ul>
+            <li><strong>Paris</strong> - Le 25 Mars 2025 à la Salle Pleyel</li>
+            <li><strong>Berlin</strong> - Le 5 Avril 2025 au Berghain</li>
+            <li><strong>New York</strong> - Le 20 Mai 2025 au Madison Square Garden</li>
+        </ul>
+    </div>
+
+    <footer>
+        <p>Suivez-nous sur nos réseaux sociaux :</p>
+        <a href="https://www.instagram.com/aelad_music" target="_blank">Instagram</a> |
+        <a href="https://www.facebook.com/aeladmusic" target="_blank">Facebook</a> |
+        <a href="https://www.twitter.com/aelad_music" target="_blank">Twitter</a>
+    </footer>
+
+</body>
+</html>
