--- a/index.html
+++ b/index.html
@@ -114,6 +114,24 @@
             background-color: #555;
         }
 
+        /* Videos */
+        .videos {
+            background-color: #1e1e1e;
+            padding: 40px 20px;
+            text-align: center;
+        }
+
+        .videos h2 {
+            font-size: 2.5em;
+            margin-bottom: 20px;
+        }
+
+        .video-embed {
+            margin: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.6);
+        }
+
         /* Footer */
         footer {
             background-color: #1a1a1a;
@@ -162,6 +180,20 @@
             <li><strong>Berlin</strong> - Le 5 Avril 2025 au Berghain</li>
             <li><strong>New York</strong> - Le 20 Mai 2025 au Madison Square Garden</li>
         </ul>
+    </div>
+
+    <div class="videos">
+        <h2>Nos Vidéos</h2>
+
+        <!-- Video 1 -->
+        <div class="video-embed">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+
+        <!-- Video 2 -->
+        <div class="video-embed">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/9bZkp7q19f0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
     </div>
 
     <footer>
