--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
             background-color: #121212;
             color: #fff;
             line-height: 1.6;
+            background-image: url('https://via.placeholder.com/1920x1080/333333/ffffff?text=The+Witcher+3+Background'); /* Image de fond personnalisée */
+            background-size: cover;
+            background-attachment: fixed;
+            background-position: center;
         }
 
         a {
@@ -26,39 +30,44 @@
 
         /* Header */
         header {
-            background: linear-gradient(135deg, #4b0082, #000);
+            background: rgba(0, 0, 0, 0.7); /* Couleur sombre avec transparence */
             color: white;
             padding: 50px 0;
             text-align: center;
+            border-bottom: 3px solid #f4a261;
         }
 
         header h1 {
-            font-size: 3.5em;
+            font-size: 4em;
+            font-family: 'Georgia', serif;
+            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.8);
             margin: 0;
         }
 
         header p {
-            font-size: 1.3em;
-            margin-top: 10px;
+            font-size: 1.5em;
             font-style: italic;
         }
 
         /* Intro */
         .intro {
-            background-color: #1e1e1e;
+            background-color: rgba(0, 0, 0, 0.8);
             padding: 40px 20px;
             text-align: center;
+            border-top: 3px solid #f4a261;
         }
 
         .intro h2 {
             font-size: 2.5em;
             margin-bottom: 20px;
+            font-family: 'Georgia', serif;
         }
 
         .intro p {
-            font-size: 1.1em;
+            font-size: 1.2em;
             max-width: 800px;
             margin: 0 auto;
+            line-height: 1.8;
         }
 
         /* Gallery */
@@ -75,8 +84,9 @@
             height: 200px;
             object-fit: cover;
             border-radius: 10px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.8);
             transition: transform 0.3s ease;
+            border: 3px solid #f4a261;
         }
 
         .gallery img:hover {
@@ -94,6 +104,7 @@
         .concerts h2 {
             font-size: 2.5em;
             margin-bottom: 20px;
+            font-family: 'Georgia', serif;
         }
 
         .concerts ul {
@@ -116,7 +127,7 @@
 
         /* Videos */
         .videos {
-            background-color: #1e1e1e;
+            background-color: rgba(0, 0, 0, 0.8);
             padding: 40px 20px;
             text-align: center;
         }
@@ -124,6 +135,7 @@
         .videos h2 {
             font-size: 2.5em;
             margin-bottom: 20px;
+            font-family: 'Georgia', serif;
         }
 
         .video-embed {
@@ -153,6 +165,7 @@
         footer a:hover {
             color: #ff6347;
         }
+
     </style>
 </head>
 <body>
@@ -163,14 +176,14 @@
     </header>
 
     <div class="intro">
-        <h2>Bienvenue sur notre site officiel!</h2>
-        <p>Nous sommes AELAD, un groupe passionné par la musique et l'innovation. Nous mélangeons différents genres musicaux pour créer une expérience unique. Notre musique est un voyage sonore, entre rythmes endiablés et mélodies captivantes.</p>
+        <h2>Bienvenue dans notre univers épique !</h2>
+        <p>Nous sommes AELAD, un groupe passionné par la musique et l'innovation. Nos influences viennent de nombreux univers, de l'aventure épique de *The Witcher 3* à la grandeur mythologique d'*Age of Mythology*, en passant par les mondes fantastiques de *World of Warcraft* et la précision assassine d'*Assassin's Creed*. Chaque note est une quête, chaque chanson une bataille épique.</p>
     </div>
 
     <div class="gallery">
-        <img src="https://via.placeholder.com/300x200/333333/ffffff?text=Photo+1" alt="Photo 1 du groupe">
-        <img src="https://via.placeholder.com/300x200/333333/ffffff?text=Photo+2" alt="Photo 2 du groupe">
-        <img src="https://via.placeholder.com/300x200/333333/ffffff?text=Photo+3" alt="Photo 3 du groupe">
+        <img src="https://via.placeholder.com/300x200/333333/ffffff?text=The+Witcher+3" alt="The Witcher 3">
+        <img src="https://via.placeholder.com/300x200/333333/ffffff?text=Age+of+Mythology" alt="Age of Mythology">
+        <img src="https://via.placeholder.com/300x200/333333/ffffff?text=World+of+Warcraft" alt="World of Warcraft">
     </div>
 
     <div class="concerts">
