--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
             background-color: #121212;
             color: #fff;
             line-height: 1.6;
-            background-image: url('https://via.placeholder.com/1920x1080/333333/ffffff?text=The+Witcher+3+Background'); /* Image de fond personnalisée */
+            background-image: url('https://via.placeholder.com/1920x1080/333333/ffffff?text=The+Witcher+3+Background'); /* Image de fond principale */
             background-size: cover;
             background-attachment: fixed;
             background-position: center;
+            overflow-x: hidden;
         }
 
         a {
@@ -35,6 +36,9 @@
             padding: 50px 0;
             text-align: center;
             border-bottom: 3px solid #f4a261;
+            background-image: url('https://via.placeholder.com/1920x200/000000/ffffff?text=Assassin%27s+Creed+Header');
+            background-size: cover;
+            background-position: center;
         }
 
         header h1 {
@@ -55,6 +59,9 @@
             padding: 40px 20px;
             text-align: center;
             border-top: 3px solid #f4a261;
+            background-image: url('https://via.placeholder.com/1920x300/333333/ffffff?text=World+of+Warcraft');
+            background-size: cover;
+            background-position: center;
         }
 
         .intro h2 {
@@ -99,6 +106,10 @@
             color: white;
             padding: 40px 20px;
             text-align: center;
+            border-top: 5px solid #f4a261;
+            background-image: url('https://via.placeholder.com/1920x300/444444/ffffff?text=Age+of+Mythology');
+            background-size: cover;
+            background-position: center;
         }
 
         .concerts h2 {
@@ -149,6 +160,7 @@
             background-color: #1a1a1a;
             padding: 30px 20px;
             text-align: center;
+            border-top: 5px solid #f4a261;
         }
 
         footer p {
