--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
+     <!-- Lien vers le CSS de Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <title>AELAD - Groupe de Musique</title>
     <style>
         /* Style global */
@@ -192,11 +196,26 @@
         <p>Nous sommes AELAD, un groupe passionné par la musique et l'innovation. Nos influences viennent de nombreux univers, de l'aventure épique de *The Witcher 3* à la grandeur mythologique d'*Age of Mythology*, en passant par les mondes fantastiques de *World of Warcraft* et la précision assassine d'*Assassin's Creed*. Chaque note est une quête, chaque chanson une bataille épique.</p>
     </div>
 
-    <div class="gallery">
-        <img src="https://via.placeholder.com/300x200/333333/ffffff?text=The+Witcher+3" alt="The Witcher 3">
-        <img src="https://via.placeholder.com/300x200/333333/ffffff?text=Age+of+Mythology" alt="Age of Mythology">
-        <img src="https://via.placeholder.com/300x200/333333/ffffff?text=World+of+Warcraft" alt="World of Warcraft">
+    <!-- Carrousel d'images -->
+    <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+            <!-- Les éléments du carrousel seront ajoutés dynamiquement ici par JavaScript -->
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
     </div>
+
+    <!-- Script JS pour Bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Inclure ton fichier JavaScript -->
+    <script src="script.js"></script>
 
     <div class="concerts">
         <h2>Prochains Concerts</h2>
