--- a/index.html
+++ b/index.html
@@ -212,20 +212,13 @@
         <p>Nous sommes AELAD, un groupe passionné par la musique et l'innovation. Nos influences viennent de nombreux univers, de l'aventure épique de *The Witcher 3* à la grandeur mythologique d'*Age of Mythology*, en passant par les mondes fantastiques de *World of Warcraft* et la précision assassine d'*Assassin's Creed*. Chaque note est une quête, chaque chanson une bataille épique.</p>
     </div>
 
-    <!-- Carrousel d'images -->
-    <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
-            <!-- Les éléments du carrousel seront ajoutés dynamiquement ici par JavaScript -->
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
-    </div>
+   <!-- Carrousel -->
+     <div class="carousel-container">
+       <div class="carousel-images"></div>
+       <button class="prev">←</button>
+       <button class="next">→</button>
+     </div>
+
 
     <!-- Script JS pour Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
